--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "m3u-filter"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,9 +8,14 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+#serde_json = "1.0"
 regex = "1"
 clap = "2"
 url = "2"
-http = "0.2"
 reqwest = { version = "0", features = ["blocking"] }
 chrono = "0.4"
+actix-web = "3"
+actix-server = "1"
+actix-files = "0"
+actix-cors = "0"
+futures = "0.3"
