--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,27 +25,28 @@
     "rxjs": "^7.4.0"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.3",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
+    "@types/file-saver": "2.0.3",
+    "@types/react": "17.0.27",
+    "@types/react-dom": "17.0.9",
     "concurrently": "6.3.0",
-    "node-sass": "^6.0.1",
-    "prettier": "^2.4.1",
-    "react-scripts": "^4.0.3",
-    "typescript": "^4.3.5",
-    "wait-on": "^6.0.0",
-    "eslint": "7.21.0",
+    "node-sass": "6.0.1",
+    "prettier": "2.4.1",
+    "react-scripts": "4.0.3",
+    "typescript": "4.4.3",
+    "wait-on": "6.0.0",
+    "eslint": "7.32.0",
     "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
+    "@typescript-eslint/parser": "4.33.0",
     "babel-eslint": "10.1.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "5.3.1",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-flowtype": "6.1.0",
+    "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "4.2.0"
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-jest": "24.5.2"
   },
   "browserslist": {
     "production": [
