added sort and options to targets

--- a/config.yml
+++ b/config.yml
@@ -8,13 +8,17 @@ input:
   persist: playlist_{}.m3u
 targets:
   - filename: playlist_1.m3u
+    options:
+      ignore_logo: true
+    sort:
+      order: Asc
     filter:
-        mode: Include
-        rules:
-          - field: Group
-            pattern: ^DE\s.*
-          - field: Group
-            pattern: ^AU\s.*
+      mode: Include
+      rules:
+        - field: Group
+          pattern: ^DE\s.*
+        - field: Group
+          pattern: ^AU\s.*
     rename:
       - field: Group
         pattern: ^DE(.*)
