--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,41 +12,51 @@
     "react-eject": "react-scripts eject",
     "build": "cross-env REACT_APP_STAGE=production PUBLIC_URL= yarn react-build",
     "start": "yarn react-start",
-    "lint": "eslint --config eslintrc.json src/** --no-error-on-unmatched-pattern --quiet"
+    "lint": "eslint --config eslintrc.json src/** --no-error-on-unmatched-pattern --quiet",
+    "upgr": "yarn upgrade-interactive --latest",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "5.3.0",
+    "@mui/styles": "5.3.0",
+    "@mui/icons-material": "5.3.0",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
     "cross-env": "7.0.3",
-    "file-saver": "^2.0.5",
-    "notistack": "^1.0.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rxjs": "^7.4.0"
+    "file-saver": "2.0.5",
+    "notistack": "2.0.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "rxjs": "7.5.2"
+  },
+  "resolutions": {
+    "**/@babel/runtime": "7.16.7"
   },
   "devDependencies": {
-    "@types/file-saver": "2.0.3",
-    "@types/react": "17.0.27",
-    "@types/react-dom": "17.0.9",
-    "concurrently": "6.3.0",
-    "node-sass": "6.0.1",
-    "prettier": "2.4.1",
-    "react-scripts": "4.0.3",
-    "typescript": "4.4.3",
-    "wait-on": "6.0.0",
-    "eslint": "7.32.0",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.33.0",
+    "@babel/runtime": "7.16.7",
+    "@types/file-saver": "2.0.5",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "@typescript-eslint/eslint-plugin": "5.10.0",
+    "@typescript-eslint/parser": "5.10.0",
     "babel-eslint": "10.1.0",
+    "concurrently": "7.0.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "6.1.0",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-config-react-app": "7.0.0",
+    "eslint-plugin-flowtype": "8.0.3",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jest": "25.7.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-jest": "24.5.2"
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "node-sass": "7.0.1",
+    "prettier": "2.5.1",
+    "react-scripts": "5.0.0",
+    "typescript": "4.5.4",
+    "wait-on": "6.0.0",
+    "source-map-explorer": "2.5.2"
   },
   "browserslist": {
     "production": [
