--- a/config.yml
+++ b/config.yml
@@ -1,25 +1,15 @@
+api: {host: 127.0.0.1, port: 8901, web_root: /home/m3u-filter/web}
 working_dir: /home/m3u-filter/data
-api:
-  host: 127.0.0.1
-  port: 8901
-  web_root: /home/m3u-filter/web
-input:
-  url: http://myserver.net/playlist.m3u
-  persist: playlist_{}.m3u
-targets:
-  - filename: playlist_1.m3u
-    options:
-      ignore_logo: true
-    sort:
-      order: Asc
-    filter:
-      mode: Include
-      rules:
-        - field: Group
-          pattern: ^DE\s.*
-        - field: Group
-          pattern: ^AU\s.*
-    rename:
-      - field: Group
-        pattern: ^DE(.*)
-        new_name: 1. DE$1
+sources:
+  - input: {persist: 'playlist_1_{}.m3u', url: 'http://myserver.net/playlist.m3u'}
+    targets:
+      - filename: playlist_1.m3u
+        filter:
+          mode: Include
+          rules:
+            - {field: Group, pattern: ^DE\s.*}
+            - {field: Group, pattern: ^AU\s.*}
+        options: {ignore_logo: true}
+        rename:
+          - {field: Group, new_name: 1. DE$1, pattern: ^DE(.*)}
+        sort: {order: Asc}
