--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "m3u-filter"
-version = "0.8.0"
+version = "0.9.0"
 edition = "2018"
 
 [profile.release]
@@ -26,3 +26,6 @@ actix-files = "0"
 actix-cors = "0"
 futures = "0.3"
 path-absolutize = "3.0.11"
+pest = "2.1.3"
+pest_derive = "2.1.0"
+enum-iterator = "0.7.0"
