--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,7 @@ sources:
         rename:
           - { field: Group, new_name: 1. DE$1, pattern: ^DE(.*) }
         sort: { order: Asc }
+        mapping: kumy
       - filename: playlist_strm
         type: Strm
         filter: 'Group ~ "^tv-shows.*"'
