--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "m3u-filter",
   "description": "m3u-filter",
   "author": "euzu",
-  "version": "0.9.3",
+  "version": "0.9.4",
   "private": true,
   "homepage": "./",
   "scripts": {
@@ -17,11 +17,11 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
-    "@mui/material": "5.3.0",
-    "@mui/styles": "5.3.0",
-    "@mui/icons-material": "5.3.0",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
+    "@mui/icons-material": "5.3.0",
+    "@mui/material": "5.3.0",
+    "@mui/styles": "5.3.0",
     "cross-env": "7.0.3",
     "file-saver": "2.0.5",
     "notistack": "2.0.3",
@@ -54,9 +54,9 @@
     "node-sass": "7.0.1",
     "prettier": "2.5.1",
     "react-scripts": "5.0.0",
+    "source-map-explorer": "2.5.2",
     "typescript": "4.5.4",
-    "wait-on": "6.0.0",
-    "source-map-explorer": "2.5.2"
+    "wait-on": "6.0.0"
   },
   "browserslist": {
     "production": [
