--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 #serde_json = "1.0"
 regex = "1"
-clap = "2"
+clap = { version = "4", features = ["derive"] }
 url = "2"
 reqwest = { version = "0", features = ["blocking"] }
 chrono = "0.4"
