--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,46 +17,44 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
-    "@mui/icons-material": "5.3.0",
-    "@mui/material": "5.3.0",
-    "@mui/styles": "5.3.0",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
+    "@mui/icons-material": "5.11.0",
+    "@mui/material": "5.11.6",
+    "@mui/styles": "5.11.2",
     "cross-env": "7.0.3",
     "file-saver": "2.0.5",
-    "notistack": "2.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "rxjs": "7.5.2"
-  },
-  "resolutions": {
-    "**/@babel/runtime": "7.16.7"
+    "notistack": "2.0.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "rxjs": "7.8.0"
   },
   "devDependencies": {
-    "@babel/runtime": "7.16.7",
+    "@babel/runtime": "7.20.13",
     "@types/file-saver": "2.0.5",
-    "@types/react": "17.0.38",
-    "@types/react-dom": "17.0.11",
-    "@typescript-eslint/eslint-plugin": "5.10.0",
-    "@typescript-eslint/parser": "5.10.0",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "5.49.0",
+    "@typescript-eslint/parser": "5.49.0",
+    "@types/video.js": "7.3.50",
     "babel-eslint": "10.1.0",
-    "concurrently": "7.0.0",
-    "eslint": "8.7.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-react-app": "7.0.0",
+    "concurrently": "7.6.0",
+    "eslint": "8.32.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-config-react-app": "7.0.1",
     "eslint-plugin-flowtype": "8.0.3",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jest": "25.7.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "node-sass": "7.0.1",
-    "prettier": "2.5.1",
-    "react-scripts": "5.0.0",
-    "source-map-explorer": "2.5.2",
-    "typescript": "4.5.4",
-    "wait-on": "6.0.0"
+    "eslint-plugin-react": "7.32.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "node-sass": "8.0.0",
+    "prettier": "2.8.3",
+    "react-scripts": "5.0.1",
+    "source-map-explorer": "2.5.3",
+    "typescript": "4.9.4",
+    "wait-on": "7.0.1"
   },
   "browserslist": {
     "production": [
