--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,11 @@ sources:
           - { field: Group, new_name: 1. DE$1, pattern: ^DE(.*) }
         sort: { order: Asc }
         mapping:
-          - kumy
+          - France TNT
+          - France Premium
+          - Belgique
+          - Suisse
+          - Canada
       - filename: playlist_strm
         type: Strm
         filter: 'Group ~ "^tv-shows.*"'
