--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "m3u-filter",
   "description": "m3u-filter",
   "author": "euzu",
-  "version": "0.10.0",
+  "version": "0.10.1-0",
   "private": true,
   "homepage": "./",
   "scripts": {
