--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@ panic = 'abort'     # Abort on panic
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
-#serde_json = "1.0"
+serde_json = "1.0"
 regex = "1"
 clap = { version = "4", features = ["derive"] }
 url = "2"
-reqwest = { version = "0", features = ["blocking"] }
+reqwest = { version = "0", features = ["blocking", "json"] }
 chrono = "0.4"
 actix-web = "4.2"
 actix-server = "2.1"
