--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,20 +15,22 @@ panic = 'abort'     # Abort on panic
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
-regex = "1"
+regex = "1.7"
 clap = { version = "4", features = ["derive"] }
-url = "2"
+url = "2.3"
 reqwest = { version = "0", features = ["blocking", "json"] }
 chrono = "0.4"
-actix-web = "4.2"
-actix-server = "2.1"
+cron = "0"
+actix-web = "4.3"
+actix-server = "2.2"
 actix-files = "0"
 actix-cors = "0"
+actix-rt = "2.8"
 futures = "0.3"
-path-absolutize = "3.0.14"
-pest = "2.5.3"
-pest_derive = "2.5.3"
-enum-iterator = "1.2.0"
+path-absolutize = "3.0"
+pest = "2.5.5"
+pest_derive = "2.5"
+enum-iterator = "1.3"
 unidecode = "0"
 petgraph = "0"
 openssl = { version = "*", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
