refactoring for xtream proxy, storing xtream data into embedded db

--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,12 @@
 api: { host: 127.0.0.1, port: 8901, web_root: /home/m3u-filter/web }
 threads: 0
 working_dir: /home/m3u-filter/data
+# sec  min   hour   day of month   month   day of week   year
+schedule: "0  0  8,12,16,20,22,1  *  *  *  *"
 video_suffix:
   - .mkv
   - .mp4
   - .avi
-# sec  min   hour   day of month   month   day of week   year
-schedule: "0  0  8,12,16,20,22,1  *  *  *  *"
 templates:
   - name: DE_CHAN
     value: >-
@@ -21,6 +21,7 @@ templates:
       !FR_CHAN!
 sources:
   - input:
+      enabled: true
       type: xtream
       headers:
         User-Agent: "Mozilla/5.0 (Linux; Tizen 2.3) AppleWebKit/538.1 (KHTML, like Gecko)Version/2.3 TV Safari/538.1"
@@ -31,6 +32,7 @@ sources:
       password: test
     targets:
       - name: pl1
+        publish: true
         filename: playlist_1.m3u
         type: m3u
         filter: '!ALL_CHAN!'
