--- a/config.yml
+++ b/config.yml
@@ -20,8 +20,8 @@ templates:
       !DE_CHAN! OR
       !FR_CHAN!
 sources:
-  - input:
-      enabled: true
+  inputs:
+    - enabled: true
       type: xtream
       headers:
         User-Agent: "Mozilla/5.0 (Linux; Tizen 2.3) AppleWebKit/538.1 (KHTML, like Gecko)Version/2.3 TV Safari/538.1"
@@ -30,30 +30,30 @@ sources:
       url: 'http://localhost:8080'
       username: test
       password: test
-    targets:
-      - name: pl1
-        publish: true
-        filename: playlist_1.m3u
-        type: m3u
-        filter: '!ALL_CHAN!'
-        options: { ignore_logo: true }
-        rename:
-          - { field: group, new_name: 1. DE$1, pattern: ^DE(.*) }
-        sort:
-          groups:
-            order: asc
-        mapping:
-          - France TNT
-          - France Premium
-          - Belgique
-          - Suisse
-          - Canada
-      - filename: playlist_strm
-        type: strm
-        filter: 'Group ~ "^tv-shows.*"'
-        options: { ignore_logo: true, cleanup: true, underscore_whitespace: false, kodi_style: true }
-        rename:
-          - { field: group, new_name: 1. DE$1, pattern: ^DE(.*) }
-        sort:
-          groups:
-            order: asc
+  targets:
+    - name: pl1
+      publish: true
+      filename: playlist_1.m3u
+      type: m3u
+      filter: '!ALL_CHAN!'
+      options: { ignore_logo: true }
+      rename:
+        - { field: group, new_name: 1. DE$1, pattern: ^DE(.*) }
+      sort:
+        groups:
+          order: asc
+      mapping:
+        - France TNT
+        - France Premium
+        - Belgique
+        - Suisse
+        - Canada
+    - filename: playlist_strm
+      type: strm
+      filter: 'Group ~ "^tv-shows.*"'
+      options: { ignore_logo: true, cleanup: true, underscore_whitespace: false, kodi_style: true }
+      rename:
+        - { field: group, new_name: 1. DE$1, pattern: ^DE(.*) }
+      sort:
+        groups:
+          order: asc
