--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ panic = 'abort'     # Abort on panic
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
-serde_json = "1.0"
+serde_yaml = "0"
+serde_json = "1"
+serde-xml-rs = "0"
+quick-xml = { version = "0", features = ["serialize"] }
 regex = "1.7"
 clap = { version = "4", features = ["derive"] }
 url = "2.3"
