--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ panic = 'abort'     # Abort on panic
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
 serde_yaml = "0"
 serde_json = "1"
 serde-xml-rs = "0"
