--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ env_logger = "0.10"
 rustelebot = "0.3"
 bincode = "1.3"
 uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
+lzma-rs = "0.3.0"
