--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./data:/data
       # - ./config.yml:/config.yml
+      # - ./config.yml:/source.yml
       # - ./api-proxy.yml:/api-proxy.yml
       # - ./mapping.yml:/mapping.yml
     environment:
