worked on main config ui, except headers (missing map input component), evrything seems to work.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "notistack": "3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tagsinput": "3.20.3",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/file-saver": "2.0.7",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "@types/react-tagsinput": "^3.20.4",
     "@types/video.js": "7.3.56",
     "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "6.11.0",
