Added default config path './config'. Config path can be overriden with "-p" argument.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /
 COPY --from=build /usr/share/zoneinfo /usr/share/zoneinfo
 COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
-COPY ["./m3u-filter", "./config.yml",  "./source.yml", "./api-proxy.yml",  "./mapping.yml", "/"]
+COPY ./m3u-filter /
 COPY ./web /web
 
-CMD ["./m3u-filter", "-s", "-c", "./config.yml"]
+CMD ["./m3u-filter", "-s", "-p", "/config"]
