--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,11 +2,13 @@ version: '3'
 services:
   m3u-filter:
     container_name: m3u-filter
-    image: m3u-filter:latest
+    image: ghcr.io/euzu/m3u-filter:latest
     working_dir: /
     volumes:
       - ./data:/data
       - ./config:/config
+      - ./backup:/backup
+      - ./downloads:/downloads
     environment:
       - TZ=Europe/Paris
     ports:
