added update_on_boot to example config

--- a/config/config.yml
+++ b/config/config.yml
@@ -2,6 +2,7 @@ api: { host: 127.0.0.1, port: 8901, web_root: /home/m3u-filter/web }
 threads: 0
 working_dir: /home/m3u-filter/data
 backup_dir: /home/m3u-filter/.backup
+update_on_boot: false
 # sec  min   hour   day of month   month   day of week   year
 schedule: "0  0  8,12,16,20,22,1  *  *  *  *"
 messaging:
