Added input options xtream_skip_live, xtream_skip_vod, xtream_skip_series.

--- a/config/source.yml
+++ b/config/source.yml
@@ -21,6 +21,8 @@ sources:
         url: 'http://localhost:8080'
         username: test
         password: test
+        select:
+          -
     targets:
       - name: pl1
         filename: playlist_1.m3u
