initial steps for authentication for webui

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ actix-server = "2.3"
 actix-files = "0"
 actix-cors = "0"
 actix-rt = "2.9"
+actix-web-httpauth = "0.8"
+jsonwebtoken = "9.3"
+rust-argon2 = "2.1"
 futures = "0.3"
 path-absolutize = "3.1"
 pest = "2.7"
