--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,5 @@ bincode = "1.3"
 uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
 lzma-rs = "0.3"
 linereader = "0"
+rand = "0.8"
+rpassword = "7.3"
