--- a/config/source.yml
+++ b/config/source.yml
@@ -45,7 +45,7 @@ sources:
         filename: playlist_1
         type: xtream
         filter: '!ALL_CHAN!'
-        options: { ignore_logo: true, xtream_skip_live_direct_source: true, , xtream_skip_video_direct_source: true, }
+        options: { ignore_logo: true, xtream_skip_live_direct_source: true, , xtream_skip_video_direct_source: true, xtream_skip_series_direct_source: true}
         rename:
           - { field: group, new_name: 1. DE$1, pattern: ^DE(.*) }
         sort:
