--- a/config/source.yml
+++ b/config/source.yml
@@ -16,7 +16,7 @@ sources:
         type: xtream
         headers:
           User-Agent: "Mozilla/5.0 (Linux; Tizen 2.3) AppleWebKit/538.1 (KHTML, like Gecko)Version/2.3 TV Safari/538.1"
-          Accept: application/json
+          Accept: application/json, application/xml
           Accept-Encoding: gzip
         url: 'http://localhost:8080'
         username: test
