--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ url = "2.5"
 reqwest = { version = "0", features = ["blocking", "json", "stream", "rustls-tls"] }
 chrono = "0.4"
 cron = "0"
-actix-web = "4.5.1"
+actix-web = "4.9"
 actix-server = "2.3"
 actix-files = "0"
 actix-cors = "0"
@@ -48,3 +48,4 @@ uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
 rand = "0.8"
 rpassword = "7.3"
 flate2 = "1"
+time = "0.3"
