timeshift.php implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,11 @@ url = "2.5"
 reqwest = { version = "0", features = ["blocking", "json", "stream", "rustls-tls"] }
 chrono = "0.4"
 cron = "0"
-actix-web = "4.5.1"
-actix-server = "2.3"
+actix-web = "4.9"
+actix-server = "2.5"
 actix-files = "0"
 actix-cors = "0"
-actix-rt = "2.9"
+actix-rt = "2.10"
 actix-web-httpauth = "0.8"
 jsonwebtoken = "9.3"
 rust-argon2 = "2.1"
@@ -48,3 +48,4 @@ uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
 rand = "0.8"
 rpassword = "7.3"
 flate2 = "1"
+time = "0.3.36"
