the directories data, backup and video-download are created when configured and do not exist.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "2.0.7"
 edition = "2021"
 
 [profile.release]
+debug = false
 opt-level = 'z'     # Optimize for size.
 lto = true          # Enable Link Time Optimization
 codegen-units = 1   # Reduce number of codegen units to increase optimizations.
