fixed env resolution

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ actix-web-httpauth = "0.8"
 jsonwebtoken = "9.3"
 rust-argon2 = "2.1"
 futures = "0.3"
-path-absolutize = "3.1"
+path-clean = "1"
 pest = "2.7"
 pest_derive = "2.7"
 enum-iterator = "2"
