--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,4 +53,4 @@ bytes = "1.8.0"
 async-std = "1.13"
 tokio-stream = { version = "0.1", features = ["sync"] }
 tokio = "1.41"
-tempfile = "3.14"
+paste = "1.0"
