--- a/docker/Dockerfile-manual
+++ b/docker/Dockerfile-manual
@@ -15,7 +15,7 @@ CMD ["./m3u-filter", "-s", "-p", "/config"]
 # Alpine Final container
 FROM alpine:latest as alpine-final
 
-RUN apk add --no-cache bash curl strace tcpdump bind-tools nano
+RUN apk add --no-cache bash curl strace tcpdump bind-tools nano ca-certificates tini
 
 WORKDIR /app
 
@@ -24,5 +24,5 @@ COPY ./web ./web
 # config should be mounted as volume
 # COPY ./config ./config
 
-ENTRYPOINT ["/app/m3u-filter"]
+ENTRYPOINT ["/sbin/tini", "--", "/app/m3u-filter"]
 CMD ["-s", "-p", "/app/config"]
