--- a/config/config.yml
+++ b/config/config.yml
@@ -4,7 +4,8 @@ working_dir: /home/m3u-filter/data
 backup_dir: /home/m3u-filter/.backup
 update_on_boot: false
 # sec  min   hour   day of month   month   day of week   year
-schedule: "0  0  8,12,16,20,22,1  *  *  *  *"
+schedules:
+  - schedule: "0  0  8,12,16,20,22,1  *  *  *  *"
 web_ui_enabled: true
 web_auth:
   enabled: false
