--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,3 +56,5 @@ tokio = "1.41"
 paste = "1.0"
 tempfile = "3.14"
 ruzstd = "0"
+# [target.'cfg(not(target_env = "msvc"))'.dependencies]
+# tikv-jemallocator =  { version = "*", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
