--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,12 +49,12 @@ rpassword = "7.3"
 flate2 = "1"
 time = "0.3"
 blake3 = "1.5"
-bytes = "1.8.0"
+bytes = "1.9"
 async-std = "1.13"
 tokio-stream = { version = "0.1", features = ["sync"] }
-tokio = "1.41"
+tokio =  { version = "1.43" }
 paste = "1.0"
-tempfile = "3.14"
+tempfile = "3.15"
 ruzstd = "0"
 # [target.'cfg(not(target_env = "msvc"))'.dependencies]
 # tikv-jemallocator =  { version = "*", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
