--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ blake3 = "1.5"
 bytes = "1.9"
 async-std = "1.13"
 tokio-stream = { version = "0.1", features = ["sync"] }
-tokio =  { version = "1.43" }
+tokio = "1.43"
 paste = "1.0"
 tempfile = "3.15"
 ruzstd = "0"
