--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,5 +56,6 @@ tokio = "1.43"
 paste = "1.0"
 tempfile = "3.15"
 ruzstd = "0"
+async-broadcast = "0"
 # [target.'cfg(not(target_env = "msvc"))'.dependencies]
 # tikv-jemallocator =  { version = "*", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
