--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "m3u-filter"
-version = "2.1.0"
+version = "2.1.1"
 edition = "2021"
 
 [profile.release]
@@ -60,6 +60,6 @@ async-broadcast = "0"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
-winapi = "0"
+winapi = { version = "0", features = ["psapi", "minwindef", "processthreadsapi"] }
 # [target.'cfg(not(target_env = "msvc"))'.dependencies]
 # tikv-jemallocator =  { version = "*", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
