--- a/config/config.yml
+++ b/config/config.yml
@@ -13,7 +13,7 @@ reverse_proxy:
       enabled: true
       size: 1024
   cache:
-    size: 100KB
+    size: 500MB
     enabled: true
     dir: /home/m3u-filter/cache
 
