--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ tokio = "1.43"
 paste = "1.0"
 tempfile = "3.15"
 ruzstd = "0"
-async-broadcast = "0"
+filetime = "0.2"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
