--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,6 @@ reqwest = { version = "0", features = ["blocking", "json", "stream", "rustls-tls
 chrono = "0.4"
 cron = "0.15"
 actix-web = "4.9"
-actix-server = "2.5"
 actix-files = "0"
 actix-cors = "0"
 actix-rt = "2.10"
@@ -38,25 +37,23 @@ pest = "2.7"
 pest_derive = "2.7"
 enum-iterator = "2"
 unidecode = "0"
-openssl = { version = "*", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
 mime = "0.3"
 log = "0.4"
 env_logger = "0.11"
 rustelebot = "0.3"
 bincode = "1.3"
-rand = "0.8"
+rand = "0.9"
 rpassword = "7.3"
 flate2 = "1"
-time = "0.3"
 blake3 = "1.5"
-bytes = "1.9"
-async-std = "1.13"
+bytes = "1.10"
 tokio-stream = { version = "0.1", features = ["sync"] }
 tokio = "1.43"
 paste = "1.0"
 tempfile = "3.15"
 ruzstd = "0"
 filetime = "0.2"
+parking_lot = "0.12"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
