--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ path-clean = "1"
 pest = "2.7"
 pest_derive = "2.7"
 enum-iterator = "2"
+openssl = { version = "*", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
 unidecode = "0"
 mime = "0.3"
 log = "0.4"
